Интеграция MapStruct для маппинга заявок: добавлен ApplicationMapper, обновлены сервис и контроллер для возврата ApplicationResponse, рефакторинг ApplicationService